Add .travis.yml & scripts for automatic build and release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "koha-plugin-ebook-deleter",
   "version": "1.0.0",
+  "previous_version": "1.0.0",
   "description": "Koha Ebook Deleter Plugin",
   "devDependencies": {
     "gulp": "^3.9.1",
@@ -23,6 +24,8 @@
   "homepage": "https://github.com/bywatersolutions/koha-plugin-ebook-deleter#readme",
   "dependencies": {
     "datetime": "0.0.3",
+    "gulp-replace": "^0.6.1",
+    "jsonfile": "^4.0.0",
     "node-datetime": "^2.0.0"
   }
 }
